Security fixes, N+1/pagination fixes, JWT hardening, CORS, tests, and deployment prep